--- a/index.html
+++ b/index.html
@@ -8,27 +8,18 @@
   <body>
     <!-- "Header" -->
      <h1>Discover hidden places in the world around you</h1>
-
      <p><a class="dl_exc" href="#">Download Excursion (Coming soon!)</a></p>
-
      <video autoplay="" muted="" loop="">
        <source src="resources/videos/excursion.mp4" type="video/mp4">
      </video>
-
      <!-- "Paragraph One" -->
      <h2>Your personal travel guide</h2>
-
      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-
      <p><img src="resources/images/camp.jpg" alt=""></p>
-
      <!-- "Paragraph Two" -->
-     <p><img class="app" src="resources/images/phone.png"></p>
-
+     <p><img src="resources/images/phone.png"></p>
      <h2>Coming Soon for iPhone and Android</h2>
-
      <p><a class="dl_exc" href="#">Download Excursion (Coming soon!)</a></p>
-
      <!-- "Footer" -->
      <div class="footer">
        <p>© Excursion</p>
